# noti

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: labeler.yml
.github/workflows/: rust-build.yml  rust-clippy.yml  rust-test.yml  rustfmt-check.yml
crates/app/: cli.rs  main.rs
crates/backend/: Cargo.toml  README.md
crates/backend/src/: audio.rs  backend_manager.rs  banner.rs  cache.rs  dispatcher.rs  error.rs  history_manager.rs  idle_manager.rs  idle_notifier.rs  internal_messages.rs  lib.rs  render.rs  scheduler.rs  window.rs  window_manager.rs
crates/backend/src/db/: entity.rs  mod.rs
crates/backend/src/managers/: idle_manager.rs  mod.rs  window_manager.rs
crates/backend/src/managers/window_manager/: banner.rs  banner_stack.rs  buffer.rs  cache.rs  window.rs
crates/backend/src/render/: banner.rs  border.rs  color.rs  font.rs  image.rs  text.rs  types.rs  widget.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: color.rs  colors.rs  display.rs  general.rs  lib.rs  sorting.rs  spacing.rs  text.rs  theme.rs  watcher.rs
crates/dbus/: Cargo.toml  README.md
crates/dbus/src/: actions.rs  client.rs  image.rs  lib.rs  notification.rs  server.rs  text.rs
crates/filetype/: .gitignore  Cargo.toml  README.md
crates/filetype/src/: converter.rs  layout.pest  lib.rs  parser.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: config_property.rs  general.rs  generic_builder.rs  lib.rs
crates/macros/tests/: config_property.rs  generic_builder.rs  test_generic_builder.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: border.rs  color.rs  drawer.rs  font.rs  image.rs  lib.rs  text.rs  types.rs  widget.rs
crates/render/src/widget/: flex_container.rs  image.rs  text.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: cached_data.rs  error.rs  file_descriptor.rs  file_watcher.rs  lib.rs  paths.rs  value.rs
crates/systemhub/: Cargo.toml
crates/systemhub/src/: lib.rs  module.rs
crates/systemhub/src/modules/: mod.rs  network.rs  power.rs
docs/: Autostart.md  BannerLayout.md  ConfigProperties.md  Filetype.md  NotificationLayout.md
schemas/: introspection.xml
src/: config.rs  core.rs  dbus.rs  main.rs  notification.rs  render.rs
src/backend/: mod.rs  render.rs  window.rs  window_manager.rs
src/backend/render/: banner.rs  border.rs  color.rs  font.rs  image.rs  layer.rs  text.rs  types.rs  widget.rs  window.rs
src/cli/: mod.rs
src/config/: mod.rs  offset.rs  sorting.rs  spacing.rs  watcher.rs
src/data/: dbus.rs  image.rs  internal_messages.rs  mod.rs  notification.rs  text.rs
src/dbus/: client.rs  server.rs
src/render/: border.rs  color.rs  font.rs  image.rs  layer.rs  text.rs
