[package]
name = "noti"
authors = [ "noti-rs" ]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
derive_builder = "0.20.0"
derive_more = "0.99.18"
fontdue = { version = "0.9.2", features = ["parallel", "std"] }
image = "0.25.1"
owned_ttf_parser = "0.24.0"
rayon = "1.10.0"
once_cell = "1.19.0"
regex = "1.10.5"
resvg = "0.42.0"
serde = "1.0.203"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
wayland-client = "0.31.3"
wayland-protocols = { version = "0.32.1", features = ["client", "wayland-client"] }
wayland-protocols-wlr = { version = "0.3.1", features = ["client", "wayland-client"] }
toml = "0.8.14"
zbus = "4.3.0"
itertools = "0.13.0"
