[package]
name = "noti"
authors = [ "noti-rs" ]
version = "0.1.0"
edition = "2021"

[[bin]]
path = "crates/app/main.rs"
name = "noti"

[workspace]
members = [
  "crates/config",
  "crates/backend",
  "crates/client",
  "crates/dbus",
  "crates/macros",
]

[workspace.package]
authors = [ "noti-rs" ]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
backend = { path = "crates/backend" }
config = { path = "crates/config" }
clap = { version = "4.5.7", features = ["derive"] }
