[package]
name = "noti"
authors = [ "noti-rs" ]
version = "0.1.0"
edition = "2021"

[[bin]]
path = "crates/app/main.rs"
name = "noti"

[workspace]
members = [
  "crates/config",
  "crates/backend",
  "crates/client",
  "crates/dbus",
  "crates/macros",
  "crates/render",
  "crates/filetype",
  "crates/shared"
]

[workspace.package]
authors = [ "noti-rs" ]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
zbus = "4.4.0"
derive_more = { version = "1.0.0", features = ["display"] }
humantime = "2.1.0"

config.path = "crates/config"
render.path = "crates/render"
dbus.path = "crates/dbus"
shared.path = "crates/shared"
macros.path = "crates/macros"

[dependencies]
config.workspace = true
backend.path = "crates/backend"
client.path = "crates/client"

anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.5"
