[package]
name = "backend"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dbus.workspace = true
config.workspace = true
render.workspace = true
shared.workspace = true
filetype.path = "../filetype"

anyhow.workspace = true
tokio.workspace = true
log.workspace = true
humantime.workspace = true

tempfile = "3.12.0"
wayland-client = "0.31.5"
wayland-protocols = { version = "0.32.3", features = ["client", "wayland-client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3.3", features = ["client", "wayland-client"] }
indexmap = "2.4.0"
chrono = "0.4.39"
