[package]
name = "backend"
authors.workspace = true
version.workspace = true
edition.workspace = true

[features]
default = ["libc_alloc"]
libc_alloc = ["dep:libc"]

[dependencies]
dbus.workspace = true
config.workspace = true
render.workspace = true
shared.workspace = true
filetype.path = "../filetype"

anyhow.workspace = true
async-io.workspace = true
async-channel.workspace = true
log.workspace = true
humantime.workspace = true
tempfile.workspace = true
derive_builder.workspace = true

wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = ["client", "wayland-client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3.8", features = ["client", "wayland-client"] }
indexmap = "2.4.0"
chrono = "0.4.39"
libc = { version = "0.2.174", optional = true }
