[package]
name = "config"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dbus.workspace = true
macros.workspace = true
shared.workspace = true

anyhow.workspace = true
log.workspace = true
humantime.workspace = true

serde = "1.0.205"
toml = "0.8.19"
shellexpand = "3.1.0"
glob = "0.3.1"
