[package]
name = "dbus"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

derive_more = { version = "1.0.0", features = ["display"] }
html-escape = "0.2.13"
regex = "1.10.6"
zbus = "4.4.0"
