[package]
name = "dbus"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
log.workspace = true
zbus.workspace = true
derive_more.workspace = true

html-escape = "0.2.13"
unic-segment = "0.9.0"
rusqlite = "0.32.1"
serde_json = "1.0.133"
serde = "1.0.216"
