[package]
name = "render"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
dbus.workspace = true
shared.workspace = true
macros.workspace = true

log.workspace = true
anyhow.workspace = true
derive_more.workspace = true

derive_builder = "0.20.0"
ab_glyph = "0.2.28"
resvg = "0.43.0"
image = "0.25.2"
itertools = "0.13.0"
freedesktop-icons = "0.2.6"
libc = "0.2.169"
ttf-parser = "0.25.1"
