[package]
name = "render"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
dbus.workspace = true
shared.workspace = true
macros.workspace = true
tempfile.workspace = true

log.workspace = true
anyhow.workspace = true
derive_more.workspace = true

derive_builder = "0.20.0"
resvg = "0.43.0"
image = { version = "0.25.2", features = ["png"] }
freedesktop-icons = "0.2.6"
pangocairo = "0.20.7"
cairo-rs = { version = "0.20.7", features = ["png", "svg"] }
