[package]
name = "render"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
dbus.workspace = true
shared.workspace = true
macros.workspace = true
tempfile.workspace = true

log.workspace = true
anyhow.workspace = true
derive_more.workspace = true
derive_builder.workspace = true

resvg = "0.45.1"
image = { version = "0.25.2", features = ["png"] }
pangocairo = "0.21.0"
cairo-rs = { version = "0.21.0", features = ["png", "svg"] }
linicon = "2.3.0"
