[package]
name = "systemhub"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
config.workspace = true
client.workspace = true

anyhow.workspace = true
zbus.workspace = true
tokio.workspace = true
log.workspace = true

libc = "0.2.158"
libpulse-binding = "2.28.1"
pipewire = "0.8.0"
tokio-udev = "0.9.1"
futures-util = "0.3.30"
derive_more = { version = "1.0.0", features = ["display"] }
